--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,11 @@ a{
     text-decoration: none;
 }
 
+select,
+::picker(select) {
+  appearance: base-select;
+}
+
 header{
     display: flex;
     justify-content: space-between;
