minor visual changes

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-size: 16px;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
 }
 
 body{
@@ -41,6 +42,7 @@ header{
     display: flex;
     gap: 40px;
 }
+
 
 #farm-select{
     background-color: rgb(1, 1, 93);
@@ -151,6 +153,43 @@ main{
     display: flex;
     flex-direction: column;
     gap: 7px;
+}
+
+#featured-solutions-section{
+    min-width: 100%;
+    min-height: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 35px;
+    overflow: hidden;
+}
+
+.featured-subsection{
+    display: flex;
+    gap: 20px;
+}
+
+.wide-card{
+    display: flex;
+    height: 350px;
+    width: 60%;
+    flex-direction: column;
+    border: 1px solid gray;
+    border-radius: 9px;
+    background-color: rgba(231, 231, 231, 0.925);
+}
+
+.related-topics{
+    display: flex;
+    list-style: none;
+    gap: 20px;
+}
+
+.related-topics li{
+    border: 1px solid gray;
+    padding: 11px;
+    border-radius: 20px;
 }
 
 
