--- a/styles.css
+++ b/styles.css
@@ -16,11 +16,11 @@
   --header-background-color: #112d6a;
 }
 
-.page-frame{
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 1900px;
-    /* margin: 200px auto; */
+.page-frame {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1900px;
+  /* margin: 200px auto; */
 }
 
 h1 {
@@ -67,17 +67,20 @@ header {
   border-radius: 9px;
   background-color: white;
   border: 2px solid var(--border-color);
-  height: 350px;
+  height: 380px;
 }
 
 .card--solutions,
 .card--event,
 .card--news {
-  max-width: 200px;
+  width: 250px;
+  justify-content: space-between;
 }
 
 .card--wide {
   width: 60%;
+  display: flex;
+  
 }
 
 .card--narrow {
@@ -95,8 +98,8 @@ header {
 
 .card--solutions .card__img,
 .card--news .card__img {
-  width: 198px;
-  height: 100px;
+  width: 100%;
+  height: 120px;
 }
 
 .card--event .card__img {
@@ -111,23 +114,30 @@ header {
 
 .card--wide .card__img,
 .card--narrow .card__img {
-  max-width: 150px;
+  width: 150px;
   border-radius: 10px;
 }
 
 .card--wide .card__img {
-  max-height: 200px;
+  height: 200px;
+  width: 300px;
+}
+
+.card--wide__info{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding-left: 20px;
 }
 
 .card--narrow .card__img {
   max-height: 140px;
 }
 
-
-.page-section__headings p{
-    font-size: 1.2em;
-    opacity: 0.5;
-    font-weight: 600;
+.page-section__headings p {
+  font-size: 1.2em;
+  opacity: 0.5;
+  font-weight: 600;
 }
 
 select,
@@ -161,7 +171,7 @@ select,
 aside {
   display: flex;
   flex-direction: column;
-  width: 170px;
+  width: 250px;
   justify-content: space-between;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -237,28 +247,21 @@ main {
 }
 
 
-
-.solution-card-upper-part {
-  border-bottom: 2px solid lightgray;
-  height: 80%;
-}
-
 .card--solutions .info-holder {
   padding: 15px;
   display: flex;
   flex-direction: column;
-  gap: 7px;
+  gap: 15px;
 }
 
 .solution-card-headings {
   display: flex;
-  gap: 5px;
+  gap: 20px;
   align-items: center;
 }
 
-
-.page-section__card-holder{
- display: flex;
+.page-section__card-holder {
+  display: flex;
   justify-content: space-between;
   gap: 10px;
 }
@@ -269,20 +272,21 @@ main {
   border: 1px solid blue;
   padding: 5px;
   border-radius: 3px;
+  text-align: center;
 }
 
-.solution-card-down-part {
+.card--action {
   display: flex;
   justify-content: flex-end;
   padding: 25px;
+  border-top: 2px solid var(--border-color);
 }
 
-.wide-card-upper-part {
+.card--wide__upper {
   display: flex;
   height: 80%;
   padding: 10px;
   gap: 6px;
-  border-bottom: 2px solid gray;
 }
 
 .wide-card-text-holder {
@@ -326,13 +330,7 @@ main {
   text-align: center;
   align-items: center;
   width: max-content;
-  background-color: rgb(236, 235, 235);
-}
-
-.wide-card-down-part {
-  display: flex;
-  justify-content: flex-end;
-  padding: 20px;
+  background-color: white;
 }
 
 .greyed-out {
@@ -349,7 +347,6 @@ main {
   height: 80%;
   padding: 20px;
   gap: 6px;
-  border-bottom: 2px solid gray;
 }
 
 .narrow-card-headings {
@@ -359,11 +356,6 @@ main {
   gap: 10px;
 }
 
-.narrow-card-down-part {
-  display: flex;
-  justify-content: flex-end;
-  padding: 20px;
-}
 
 .page-section--events {
   flex-direction: row;
@@ -423,7 +415,6 @@ main {
   flex-direction: column;
   width: 50%;
 }
-
 
 .podcasts-top-part {
   display: flex;
